<resources>
    <string name="app_name">Kea Bank App</string>
    <string name="login_title">Sign In</string>
    <string name="bank_logo">bank_logo</string>
    <string name="account_option_menu">Accounts</string>
    <string name="cards_option_menu">Cards</string>
    <string name="contact_option_menu">Contact</string>
    <string name="user_option_menu">User</string>
    <string name="sign_out_option_menu">Sign out</string>
    <string name="toastSelectPosition">Position</string>
    <string name="toastSelectID">ID:</string>
    <string name="toastLoginError">Wrong mail or password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_account_details">AccountDetails</string>
    <string name="popup_title">Deposit Money</string>
    <string name="popup_amount">Enter amount of money</string>
    <string name="popup_btnSubmit">Submit</string>
    <string name="title_activity_bill_main">Bills</string>
    <string name="toast_created_account_succ">Created a new account</string>
    <string name="account_create_error">Required.</string>
    <string name="save_account">Save account</string>
    <string name="hint_account_name">Account name</string>
    <string name="create_new_account_title">Create a new account</string>
    <string name="details_account_name_title">Account name</string>
    <string name="error_no_name_value">TextView</string>
    <string name="details_account_type_title">Account Type</string>
    <string name="account_details_type">TextView</string>
    <string name="details_account_balance_title">Account Balance</string>
    <string name="account_balance">TextView</string>
    <string name="deposit_money_btn">Deposit Money</string>
    <string name="transfer_money_btn">Transfer Money</string>
    <string name="transfer_money_title">Transfer Money</string>
    <string name="enter_amount_to_transfer">Enter amount to transfer</string>
    <string name="hint_amount">100.00 kr</string>
    <string name="transf_account_name_title">This is some filler text</string>
    <string name="transfer_from_account">From</string>
    <string name="transfer_to_account">To</string>
    <string name="transfer_hint_email">Email</string>
    <string name="transfer_info_text_email">Enter email of user you want to transfer to</string>
    <string name="transfer_btn_text">Send Money</string>
    <string name="btn_check_user">Check</string>
    <string name="tap_for_transfer_title">Tap for global transfer</string>
    <string name="own_account">own account</string>
    <string name="other_accounts">other accounts</string>
    <string name="pick_account_from_user">pick account from user</string>
    <string name="title_select_date_for_payment">Select date for payment</string>
    <string name="title_payment_amount">Payment amount</string>
    <string name="title_write_a_name_for_paymet">Write a name for paymet</string>
    <string name="hint_ex_internet">Ex. Internet</string>
    <string name="title_select_account_to_pay_from">Select account to pay from</string>
    <string name="title_balance_in_account">Balance in account</string>
    <string name="title_selected_account_balance">TextView</string>
    <string name="enter_information_abount_recivers_account">Enter information abount recivers account</string>
    <string name="hint_bill_account_number">Account number</string>
    <string name="transfer_automatic_payment_title">Automatic Payment</string>
    <string name="press_to_select_date">Press to select date</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_personal_information">Personal Information</string>
    <string name="user_hint_first_name">First name</string>
    <string name="user_hint_last_name">Last name</string>
    <string name="user_where_do_you_live">Where do you live</string>
    <string name="user_hint_zip_code">Zip code</string>
    <string name="user_assign_fillial_title">Assign Fillial</string>
    <string name="user_k_benhavn">København</string>
    <string name="user_odense">Odense</string>
    <string name="user_create_user_btn">Create User</string>
    <string name="user_hint_street_adress">Street adress</string>
    <string name="user_hint_enter_your_age">Enter your age</string>
    <string name="login_prefill_test_test_dk">test@test.dk</string>
    <string name="login_hint_mail">Mail</string>
    <string name="prefill_login_123456">123456</string>
    <string name="no_user_click_below_to_sign_up">No user? Click below to sign up!</string>
    <string name="login_create_user_btn">Create User</string>
    <string name="login_forgot_password_title">Forgot password?</string>
    <string name="hint_pop_100">100</string>
    <string name="reset_hint_ex_email_dk">ex@email.dk</string>
    <string name="reset_password_btn">Reset Password</string>
    <string name="reset_enter_email_of_you_account_below_title">Enter email of you account below</string>
    <string name="autopayment_title">Title</string>
    <string name="autopayment_description">Description</string>
    <string name="autopayment_type">Type</string>
    <string name="trans_list_title">Title</string>
    <string name="trans_list_description">Description</string>
    <string name="trans_list_type">Type</string>
    <string name="account_list_title">Title</string>
    <string name="account_list_amount">Amount</string>
    <string name="account_list_type">Type</string>
    <string name="btn_withdraw_money">Withdraw Money</string>
    <string name="withdraw_error_age">Unable to withdraw: Age to low</string>
</resources>
