<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardBackgroundColor="#BBDEFB">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="?selectableItemBackground">

        <TextView
            android:id="@+id/tvAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/account_list_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvAccountBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAccountName"
            android:layout_alignParentStart="true"
            android:text="@string/account_list_amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/tvAccountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/account_list_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp" />


    </RelativeLayout>

</android.support.v7.widget.CardView>